--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -28,6 +28,7 @@
 .chinacom-27.cn/china/
 .chinanews.com/gg/
 .chinazhan.net/adfile/
+.chinatimes.com/analytics/
 .clickeye.
 .cn/ad200
 .cn/adpuba/
@@ -252,6 +253,7 @@ http://pvstat.
 http://richmedia.
 http://sinaad.proximic.cn/
 http://shows.21cn.com/ashow?
+http://sortweb.chinatimes.com/
 http://spcode.
 http://stadig.ifeng.com/
 http://stat.tudou.com/
