--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -133,12 +133,14 @@
 /acs86.com/
 /ad/600-
 /ad_files/
+/ad_paper_
 /ad_show?id
 /adcontent.
 /adpolestar/
 /all_content_ad_
 /chinaadclient.js
 /chinazhanad/
+/click_rate.php?
 /cmnen_counter.js
 /contads.gif
 /data/ad/
@@ -221,6 +223,7 @@ http://gg.blueidea.
 http://goto.www.iciba.com/
 http://hiad.
 http://hjenglish.com/js/double_index2007.js
+http://hot.wenweipo.com/
 http://hm.baidu.
 http://i1.6.cn/70/9d/
 http://i1.hk/ad
