--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -161,6 +161,7 @@
 /js/picad.js
 /js/rollflash.js
 /logcount.php?
+/LogFriend/
 /l.yimg.com/mq/i/home/promo/
 /neiyead.js
 /pvcounter/
@@ -270,6 +271,7 @@ http://trace.qq.com/
 http://tw.analysis.
 http://unionpic.boodvd.cn/ad/
 http://unstat.
+http://udn.com/1024/AD/
 http://utrack.
 http://vod.szzwch.com/
 http://xtrack.
