--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -47,6 +47,7 @@
 .cnbeta.com/images/qy/
 .cnbeta.com/images/tw125
 .cnbeta.com/yodao
+.cnzz.com/stat.gif?
 .com.tw/banner/
 .com/a1.js
 .com/adpop/
@@ -245,6 +246,7 @@ http://js.zol.com.cn/pv.js
 http://k3bbs.com/images/banner/
 http://ktzhk.com/
 http://m.openv.tv/m/
+http://mini.artxun.com/mini_artxun/
 http://mat1.gtimg.com/ent/
 http://ndx.netdrive.tv/
 http://p.cpm9v.cn/
