--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pXknDjzuOBWeOtIge3bCqQ
+# Checksum: 4o1LEdYIyPtNIp+6XX7vIw
 # Updated: 6 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3348,6 +3348,7 @@ http://www.fordforums.com.au/banner.swf
 http://www.freehomemades.com/banner
 http://www.funtonia.com/promo/
 http://www.gov-auctions.org/images/banner/banner
+http://www.greattastenopain.com/aff/
 http://www.hardsextube.com/preroll/
 http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
