--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4o1LEdYIyPtNIp+6XX7vIw
-# Updated: 6 Jun 2010
+# Checksum: ZQL9EOQEphVguhiHOr37hQ
+# Updated: 7 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1607,7 +1607,8 @@
 /adsmodules/
 /adsonar.
 /adsOpenx/
-/adspace
+/adspace2.
+/adspace/
 /adsrc.html?
 /adsreporting/
 /adsRotator
