--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZQL9EOQEphVguhiHOr37hQ
+# Checksum: MyRByJonqngKR1/4P1Betg
 # Updated: 7 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2348,6 +2348,7 @@
 /xbanner.php?
 /xcdn.xgraph.net/
 /xhr/ad/
+/yaboe_banner_
 /yahoo-ads/
 /yahooFeedProxy.
 /youradhere.
