--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jhf6k1TBFG2x1ugcB6ZEoQ
+# Checksum: FDuy/R7YaT+N1ZoLKS4csw
 # Updated: 7 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -557,6 +557,7 @@
 .forced-layer.de/
 .fptad.com/
 .fr/RealMedia/
+.freebunker.com/includes/js/ex.js
 .freebunker.com/includes/js/pop.js
 .freebunker.com/includes/js/layer.js
 .freaksofcock.com/track/
