--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: FDuy/R7YaT+N1ZoLKS4csw
+# Checksum: PZGswcJFOqyrmtv3iF3d7g
 # Updated: 7 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1760,6 +1760,7 @@
 /banniere/
 /banniere_
 /bansrc/
+/bbccom.
 /beacon/?
 /behaviorAds/
 /BelowNewsAd
