--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PZGswcJFOqyrmtv3iF3d7g
+# Checksum: jD187/jyHqs8iLEo7zQ/wQ
 # Updated: 7 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1819,7 +1819,7 @@
 /custom/ads
 /data/Ads/
 /dateads.php
-/dclk/dclk_
+/dclk_ads
 /deliver.jphp?
 /deliver.nmi
 /deliverAd/
