--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -192,6 +192,7 @@
 .deqwas.net/
 .destinationurl.
 .did-it.com/
+.dimestore.com/viapi?
 .directcounter.de/dc/
 .directnews.co.uk/feedtrack/
 .directtrack.
