--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jD187/jyHqs8iLEo7zQ/wQ
-# Updated: 7 Jun 2010
+# Checksum: oBkBX7HFuZaBE93hdL2oow
+# Updated: 8 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -348,6 +348,7 @@
 .businessclick.
 .buxflow.com/
 .buysellads.
+.buzznet.com/topscript.js.php?
 .c-on-text.com/
 .c8.net.ua/
 .ca/ads/
@@ -557,11 +558,11 @@
 .forced-layer.de/
 .fptad.com/
 .fr/RealMedia/
-.freebunker.com/includes/js/ex.js
-.freebunker.com/includes/js/pop.js
-.freebunker.com/includes/js/layer.js
 .freaksofcock.com/track/
 .free-times.com/Image/Pool/
+.freebunker.com/includes/js/ex.js
+.freebunker.com/includes/js/layer.js
+.freebunker.com/includes/js/pop.js
 .freeones.com/assets/ads/
 .freeones.com/banners/
 .freepaidsurveyz.
@@ -1610,8 +1611,8 @@
 /adsmodules/
 /adsonar.
 /adsOpenx/
-/adspace2.
 /adspace/
+/adspace2.
 /adsrc.html?
 /adsreporting/
 /adsRotator
