--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: sKio3A88/6TY7I00qCxlsA
-# Updated: 10 Jun 2010
+# Checksum: iPYjNSmx58BW6IdCOsnb4w
+# Updated: 9 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2154,6 +2154,7 @@
 /prestitial-ad
 /processAds.bg?
 /processing/impressions.asp?
+/promo.php?query=
 /promo/banner/
 /promotion/geoip/
 /promotions/ads?
@@ -3024,8 +3025,8 @@ http://bizad.
 http://blogvertising.pl/
 http://blueadvertise.
 http://boksy.onet.pl/
-http://box.shopoon.fr/
 http://box.anchorfree.net/
+http://box.shopoon.fr/
 http://br.rk.com/
 http://bugaga.tut.by/
 http://bwp.
@@ -3314,10 +3315,10 @@ http://teasernet.ru/show/
 http://teaservizio.com/block.js
 http://themis.
 http://thumbs.askjolenestatic.com/screenshots/
+http://toot.stileproject.com/
 http://topad
 http://topads.
 http://totem.porkolt.com/
-http://toot.stileproject.com/
 http://track.bannerbridge.net/ad
 http://trackdataonline.biz/
 http://trackin.affiliserve.com/
