proxy rss addition

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oBkBX7HFuZaBE93hdL2oow
-# Updated: 8 Jun 2010
+# Checksum: hIFdTrIP8K9409VsORqbNw
+# Updated: 9 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3267,6 +3267,7 @@ http://roia.biz/ts/v/
 http://rotabanner
 http://rs.mail.ru/
 http://rss.dtiserv.com/
+http://rss2search.com/delivery/
 http://ruleclaim.web.
 http://russkoexxx.com/ban/
 http://s.trigami.
