--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: hIFdTrIP8K9409VsORqbNw
+# Checksum: TJeUUkWPsJkT4sckoBlZog
 # Updated: 9 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3025,6 +3025,7 @@ http://blogvertising.pl/
 http://blueadvertise.
 http://boksy.onet.pl/
 http://box.shopoon.fr/
+http://box.anchorfree.net/
 http://br.rk.com/
 http://bugaga.tut.by/
 http://bwp.
