--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gP3s6Ekq5/RhE00VzAPsZw
+# Checksum: 5U4Pyjr63RnWsKmHTeOx4g
 # Updated: 10 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1832,6 +1832,7 @@
 /dif/?cid
 /direct_ads.js?
 /display-ads/
+/DisplayAdLeader.
 /display?ad_
 /displayad.
 /displayads.
@@ -1906,6 +1907,7 @@
 /getBanner.
 /getbanner.cfm?
 /getbanner.php?
+/getMarketplaceAds.
 /getmdhlink.
 /getmdhlink.php?
 /getsad.php?
