--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5U4Pyjr63RnWsKmHTeOx4g
+# Checksum: 4i/XYjSANoLUOzcyED39WA
 # Updated: 10 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1831,6 +1831,7 @@
 /delivery/spc.php?
 /dif/?cid
 /direct_ads.js?
+/displayadbanner_
 /display-ads/
 /DisplayAdLeader.
 /display?ad_
