site: fix fp, http://www.guardian.co.uk/multimedia

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4i/XYjSANoLUOzcyED39WA
+# Checksum: eA7WYnZPHZZfyd5TmNDdqA
 # Updated: 10 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1651,7 +1651,6 @@
 /advert.php?
 /advert_iframe
 /advertise
-/AdvertisingModule.
 /advertpro/
 /advfiles/
 /adview.
