--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TJeUUkWPsJkT4sckoBlZog
-# Updated: 9 Jun 2010
+# Checksum: sKio3A88/6TY7I00qCxlsA
+# Updated: 10 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3317,6 +3317,7 @@ http://thumbs.askjolenestatic.com/screenshots/
 http://topad
 http://topads.
 http://totem.porkolt.com/
+http://toot.stileproject.com/
 http://track.bannerbridge.net/ad
 http://trackdataonline.biz/
 http://trackin.affiliserve.com/
