--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: eA7WYnZPHZZfyd5TmNDdqA
+# Checksum: +WcZLPhHPJ07jqTHc4G3gw
 # Updated: 10 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1333,6 +1333,7 @@
 /ad-.gif
 /ad-box-
 /ad-boxes-
+/ad-feedback.
 /ad-html
 /ad-iframe-
 /ad-indicator
@@ -1340,6 +1341,7 @@
 /ad-layer
 /ad-leaderboard
 /ad-middle
+/ad-openx.
 /ad-server/
 /ad-skyscraper
 /ad-square
