--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iPYjNSmx58BW6IdCOsnb4w
-# Updated: 9 Jun 2010
+# Checksum: gP3s6Ekq5/RhE00VzAPsZw
+# Updated: 10 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -391,6 +391,7 @@
 .clixsense.com/Ad/
 .closepics.com/media/banners/
 .cloud-ips.com/givememygfp.php?
+.cltomedia.info/
 .cmfads.com/widget/
 .cmpnet.com/ads/
 .cnn.com/cnn_adspaces/
