--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1040,6 +1040,7 @@
 /OmnitureAnalytics
 /oms_analytics_
 /onedot.php?
+/opinionlab.js
 /ordertrack/
 /ot_e404.gif?
 /oxtracker.
@@ -1154,7 +1155,6 @@
 /statistics.aspx?profile
 /statistik.php?
 /statistik/
-/stats?ev
 /stats.ashx?
 /stats.asp?id
 /stats.aspx?
@@ -1169,6 +1169,7 @@
 /stats/log.
 /stats/pgview.php?
 /stats/track
+/stats?ev
 /stats_js.asp?
 /StatsHelper.gif?
 /StatsMngrWeb
@@ -1370,7 +1371,6 @@ hitcount.de/
 hitcounter
 hitmaster.de/
 http://103bees.com/
-http://l1v.ly/
 http://174.129.6.226/tracker/
 http://212.227.100.108/
 http://24counter.com/
@@ -1483,6 +1483,7 @@ http://keywordmax.com/
 http://kft.zoosnet.net/
 http://kt.tns-gallup.dk/
 http://l.keewurd.com/
+http://l1v.ly/
 http://launch.roirocket.
 http://lct.salesforce.com/
 http://link.ixs1.net/s/
