--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uupQiHW6m/tdLzNK+8v/EQ
-# Updated: 13 Jun 2010
+# Checksum: 92svK1kuoS0Gb3U6+rZWeg
+# Updated: 12 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1355,6 +1355,7 @@
 /ad.php?
 /ad.sense/
 /ad.serve.cgi?
+/ad.valary?
 /ad.view?
 /ad/468x
 /ad/a.aspx?
@@ -1832,11 +1833,11 @@
 /delivery/spc.php?
 /dif/?cid
 /direct_ads.js?
-/displayadbanner_
 /display-ads/
-/DisplayAdLeader.
 /display?ad_
 /displayad.
+/displayadbanner_
+/DisplayAdLeader.
 /displayads.
 /DNSads.
 /doors/ads/
@@ -1863,8 +1864,8 @@
 /facebooksex
 /fc_ads/
 /feeds/jobroll/?
-/files/adman/
 /ffadult/featured/external/
+/files/adman/
 /flash/ads/
 /flash/advertis
 /flash/maildating_
@@ -3194,7 +3195,6 @@ http://minibn.ipmart.com/
 http://mixmarket.biz/show/
 http://moe.jlist.com/media/
 http://motherless.com/images/banners/
-http://npvos.com/images/
 http://n4403ad.
 http://naughtywebcams.com/exports/tour/?
 http://nbjmp.com/images/
@@ -3204,6 +3204,7 @@ http://network.gofeminin.de/diff/
 http://new-popups.ru/
 http://newads.
 http://newt1.adultadworld.
+http://npvos.com/images/
 http://ns4w.org/images/promo/
 http://ns4w.org/images/vod_
 http://nzphoenix.com/
