--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +WcZLPhHPJ07jqTHc4G3gw
-# Updated: 10 Jun 2010
+# Checksum: U2SdpZKi4CbZJ4Y6pbGlSA
+# Updated: 12 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3193,6 +3193,7 @@ http://minibn.ipmart.com/
 http://mixmarket.biz/show/
 http://moe.jlist.com/media/
 http://motherless.com/images/banners/
+http://npvos.com/images/
 http://n4403ad.
 http://naughtywebcams.com/exports/tour/?
 http://nbjmp.com/images/
