--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 92svK1kuoS0Gb3U6+rZWeg
+# Checksum: QgmwL8M3/o6YcAwd3h+cAQ
 # Updated: 12 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1229,6 +1229,7 @@
 /160x600
 /170x700.
 /175x250_
+/180x150-
 /180x150/
 /184x100_
 /190x600.
