--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: U2SdpZKi4CbZJ4Y6pbGlSA
-# Updated: 12 Jun 2010
+# Checksum: uupQiHW6m/tdLzNK+8v/EQ
+# Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1863,6 +1863,7 @@
 /facebooksex
 /fc_ads/
 /feeds/jobroll/?
+/files/adman/
 /ffadult/featured/external/
 /flash/ads/
 /flash/advertis
