--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: l9OB+HIvXnpb5/h5hppjaw
+# Checksum: WoXfO5AcO/STxKmRkztQGw
 # Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3053,6 +3053,7 @@ http://cdn.assets.
 http://cdn.cpmstar.com/
 http://cdn.doubleclick.
 http://cdn.eyewonder.com/
+http://cdn.liverail.com/adasset/
 http://cdn.unicast.msn.com/
 http://click.absoluteagency.
 http://click.dtiserv2.com/
