--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WoXfO5AcO/STxKmRkztQGw
+# Checksum: unBf+OhOoeHfd9mWUKZtmQ
 # Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2711,6 +2711,7 @@ _custom_ad_
 _DynamicAds/
 _engine_ads_
 _english/adv/
+_externalAd.
 _files/ad.
 _generic_ad.
 _geobanner.
