--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: unBf+OhOoeHfd9mWUKZtmQ
+# Checksum: xemNbYVxuezuJUBoTvbsqA
 # Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -617,6 +617,7 @@
 .hitparade.ch/images/banner_
 .homepagle.com/show
 .hopfeed.com/
+.holyfragger.com/images/skins/
 .hotgoos.com/ad/
 .hotkeys.com/
 .hotlog.ru/
