--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xemNbYVxuezuJUBoTvbsqA
+# Checksum: ZMMk9qBBOevH381EeKaL8A
 # Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1892,6 +1892,7 @@
 /gameadsync.
 /gca_iframe.html?
 /geo-ads_
+/geo/ads.
 /geobox.html
 /geoday.ru/
 /get-ad.php?
