--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZMMk9qBBOevH381EeKaL8A
+# Checksum: nEVGGXuzpHAObk56Oi+Bdg
 # Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2030,7 +2030,6 @@
 /js/adFrequency
 /js/adlink
 /js/ads
-/js/ads.js
 /js/ads/
 /js/ads_
 /js_source/
