--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nEVGGXuzpHAObk56Oi+Bdg
+# Checksum: MhU5q6KBAhBXzKmXoOhlWQ
 # Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -410,8 +410,7 @@
 .com/adfile/
 .com/adimg/
 .com/adjs/
-.com/ads.cfm?
-.com/ads.js?
+.com/ads.
 .com/ads/
 .com/ads_
 .com/adsense/
