--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -615,6 +615,7 @@
 .ventivmedia.
 .verticalacuity.
 .viglink.com/api/ping?
+.visualdna.com/
 .visiblemeasures.com/log?
 .visistat.
 .visitdetails.com/
