--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -37,6 +37,7 @@
 .amung.us/ping/
 .amung.us/piwidget/
 .analytics.yahoo.
+.analytics.edgesuite.net/
 .anchorfree.net/
 .aol.ca/track/
 .aol.com/master/?
@@ -700,6 +701,7 @@
 /affl.cgi?
 /afrigator.com/track/
 /akamai/pixy.gif
+/AkamaiAnalytics.
 /AkamaiTracking
 /analiz.php3?
 /analytic_data_
