--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -643,6 +643,7 @@
 .wemfbox.
 .whispa.com/tracking/
 .whoisonline.net/?action=tracker
+.worksheetsengine.com/fd/ls/
 .wipe.de/wwa.
 .woopra-ns.com/visit/
 .woopra.
