--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QgmwL8M3/o6YcAwd3h+cAQ
-# Updated: 12 Jun 2010
+# Checksum: l9OB+HIvXnpb5/h5hppjaw
+# Updated: 13 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -882,6 +882,7 @@
 .oper.ru/data/rennabs/
 .opinionbar.com/popups/
 .org/ad/
+.org/ads/
 .ospreymedialp.
 .otcash.com/images/
 .overclockers.co.uk/home_banners/
