--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 54YnNSg1KdBgbIUVYx5ZFQ
+# Checksum: RnyOrdl752f5EYHy7LSPjQ
 # Updated: 14 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2145,6 +2145,7 @@
 /pixel?id=
 /plcornerswf.swf?
 /plugins/page-cornr
+/plugins/oiopub-direct/
 /plugins/wp_actionpop/
 /popAds.
 /portal_assets/
