--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 54YnNSg1KdBgbIUVYx5ZFQ
+# Checksum: 3JX4Aqna31NvRhs4BO7J5A
 # Updated: 14 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -613,9 +613,9 @@
 .hipals.com/cgi-bin/
 .hit-now.com/
 .hitparade.ch/images/banner_
+.holyfragger.com/images/skins/
 .homepagle.com/show
 .hopfeed.com/
-.holyfragger.com/images/skins/
 .hotgoos.com/ad/
 .hotkeys.com/
 .hotlog.ru/
@@ -2167,6 +2167,8 @@
 /publicidade/
 /pyv_watch_request_ad.
 /quickads.no/
+/radioAdEmbed.
+/radioAdEmbedGenre.
 /radOpenx?
 /rail_ad_
 /railad.
