--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: RmKcgn0TsptlG7+pfOAfgQ
+# Checksum: Cxppw1rpBKfDks3ZgpxXrg
 # Updated: 14 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -436,6 +436,7 @@
 .comclick.
 .commissionmonster.
 .complexmedianetwork.com/
+.computerhelp.com/temp/banners/
 .conduit-banners.
 .connexplace.com/
 .connextra.
@@ -2144,8 +2145,8 @@
 /pix/ads/
 /pixel?id=
 /plcornerswf.swf?
-/plugins/page-cornr
 /plugins/oiopub-direct/
+/plugins/page-cornr
 /plugins/wp_actionpop/
 /popAds.
 /portal_assets/
