remove any dubes

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: MhU5q6KBAhBXzKmXoOhlWQ
-# Updated: 13 Jun 2010
+# Checksum: 54YnNSg1KdBgbIUVYx5ZFQ
+# Updated: 14 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -512,7 +512,6 @@
 .emediate.eu/
 .emediate.se/
 .end-finder.com/
-.enworld.org/ads/
 .eporner.com/ads-
 .ero-advertising.com
 .erosadv.com/
@@ -623,7 +622,6 @@
 .hover.in/
 .hsmclick.com/
 .html?wpl=
-.hu/banners/
 .hypemakers.
 .hypernews.ru/
 .hypervre.
@@ -665,7 +663,6 @@
 .innity.com/
 .insenz.com/
 .insightexpress.
-.insites.eu/
 .insitesystems.com/
 .inskinad.com/
 .intellitxt.
@@ -1588,7 +1585,6 @@
 /adsense-
 /adsense.html?
 /adsense/
-/adsense/?
 /adsense_
 /adsensecamp.com/
 /adsensev
@@ -1693,7 +1689,6 @@
 /api/ads/
 /api/ads/
 /app/bbccom/
-/app/bbccom/
 /ArtiMediaTargetAds.swf
 /AS3AdPlayer.
 /as_u/ads/
@@ -1732,7 +1727,6 @@
 /banner_ad
 /banner_management/
 /banner_view.php?
-/BannerAd
 /bannerad
 /bannerconduit.
 /bannerframeopenads
@@ -1869,7 +1863,6 @@
 /ffadult/featured/external/
 /files/adman/
 /flash/ads/
-/flash/advertis
 /flash/maildating_
 /flash_advertising/
 /flashpeelads/
@@ -1983,7 +1976,6 @@
 /images/ad_
 /images/adbar.gif
 /images/ADS
-/images/ads-
 /images/ads-
 /images/adv/
 /images/affiliates/
@@ -2139,7 +2131,6 @@
 /pentonutility/SkinObjects/Roadblock.
 /perfads.js?
 /performancingads/
-/pfadx/bbccom.live.
 /pfadx/golem/
 /pfadx/instream_flash/
 /pfpadv.
@@ -2896,7 +2887,6 @@ http://ads.greenerworldmedia.com/
 http://ads.hearstmags.com/
 http://ads.heias.com/
 http://ads.i-am-bored.com/
-http://ads.ign.com/advertisers/
 http://ads.imeem.com/
 http://ads.ireel.com/
 http://ads.julesjordanvideo.com/
@@ -3035,7 +3025,6 @@ http://bizad.
 http://blogvertising.pl/
 http://blueadvertise.
 http://boksy.onet.pl/
-http://box.anchorfree.net/
 http://box.shopoon.fr/
 http://br.rk.com/
 http://bugaga.tut.by/
@@ -3071,7 +3060,6 @@ http://content-ads.
 http://content.liveuniverse.
 http://content.pop6.com/
 http://cp.intl.match.com/eng/prm/
-http://creative.ak.fbcdn.net/ads3/
 http://creatives.livejasmin.com/iframes/
 http://d.ads.readwriteweb.com/
 http://d.unanimis.co.uk/
@@ -3375,14 +3363,12 @@ http://www.greattastenopain.com/aff/
 http://www.hardsextube.com/preroll/
 http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
-http://www.mazda.com.au/banners/
 http://www.nationalpubpoker.com.au/images/banners/
 http://www.nationalpubpoker.com.au/images/frontpage/corporate_ban
 http://www.npplpoker.com.au/images/banners/
 http://www.npplpoker.com.au/images/frontpage/corporate_ban
 http://www.p2pnet.net/images/
 http://www.physorg.com/banner/
-http://www.pomsinoz.com/images/sponsors/
 http://www.porno-file.ru/uploads/
 http://www.pro-clockers.com/images/banners/
 http://www.seemygf.com/webmasters/iframe/
@@ -3425,7 +3411,6 @@ pornkings.com/
 private.camz.
 protect-x.com/
 resimler.randevum.
-revenue.net/
 server/AAMALL
 server/CCID
 sexmoney.com/
