--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Cxppw1rpBKfDks3ZgpxXrg
-# Updated: 14 Jun 2010
+# Checksum: VUtGpsqbfOpcCapj72exqw
+# Updated: 16 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2197,6 +2197,7 @@
 /ruby_iframe_
 /rule34/ads/
 /safetrackonline.biz/
+/ScanScoutPlugin.
 /scripts/ad-
 /scripts/Ad.
 /Scripts/AD/
