--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: VUtGpsqbfOpcCapj72exqw
+# Checksum: 7nCZxlsh7Lg+R0VUa25cEA
 # Updated: 16 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3086,6 +3086,7 @@ http://dvdkinoteatr.com/
 http://dyncdn.celebuzz.com/assets/
 http://eads.to/
 http://engine.awaps.net/
+http://engine.theloungenet.com/
 http://enoratraffic.com/
 http://erotizer.info/iframe.
 http://euro4ads.de/
