--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 7nCZxlsh7Lg+R0VUa25cEA
+# Checksum: iVLjT/xZCqjZYl8F1i287Q
 # Updated: 16 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2206,6 +2206,7 @@
 /sd/ad.php
 /searchad_
 /servead.
+/serveads.
 /serveasset.php?
 /server/ads/
 /services/ads/
