--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iVLjT/xZCqjZYl8F1i287Q
+# Checksum: PqvlCsAGuP0m+8l2/i9Onw
 # Updated: 16 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2283,6 +2283,7 @@
 /sticky_ad.js
 /stickyad.js
 /sugar-ads/
+/survey_monkey.
 /surveys/popup
 /svnad/htm
 /swf/banner.swf?
