--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PqvlCsAGuP0m+8l2/i9Onw
+# Checksum: IdzLH/98/sOJZapKUDTa2Q
 # Updated: 16 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1422,6 +1422,7 @@
 /ad_wide_
 /ad_wrapper
 /adaffiliate_
+/adaptvAdPlayer.js
 /adbanner.
 /adbanner/
 /adbanners/
@@ -2872,6 +2873,7 @@ http://adprotraffic.com/
 http://ads-
 http://ads.24media.gr/
 http://ads.4tube.com/
+http://ads.adap.tv/
 http://ads.adone.pl/
 http://ads.adonion.com/
 http://ads.adshopping.com/
