--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: IdzLH/98/sOJZapKUDTa2Q
+# Checksum: npPwoVmNEPO3cJxw9k72iQ
 # Updated: 16 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2353,6 +2353,7 @@
 /werbung_
 /whisperer/ads/
 /WidgetAd.aspx?
+/widget_ads?
 /wp-content/ads/
 /wp-popup-scheduler/
 /wp-srv/ad/
