--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1,5 +1,6 @@
 # Fanboy's Stats list (Iron-Chrome)
 # Updated: 12 May 2010
+&trackingId=
 -AdTracking.
 -seo-tracker.
 -statistiken.de/
@@ -319,6 +320,7 @@
 .ipro.com/
 .ipstats.de/
 .ipv6monitoring.eu/
+.iselect.com.au/scripts/track.js
 .istrack.com/
 .itgear.jp/
 .ixquick.com/cgi-bin/ccspacer?&anticache=
