--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wNCtyAf8AzsykBoESPz97Q
-# Updated: 18 Jun 2010
+# Checksum: efMyI6mzOmRVKNPLvEKeFQ
+# Updated: 17 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2874,6 +2874,7 @@ http://adnext.fr/
 http://adplus.
 http://adprotraffic.com/
 http://ads-
+http://ad.ytsa.net/
 http://ads.24media.gr/
 http://ads.4tube.com/
 http://ads.adap.tv/
