--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: efMyI6mzOmRVKNPLvEKeFQ
+# Checksum: 6gHasJOi4TE/6B5jkoq3eQ
 # Updated: 17 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1484,6 +1484,7 @@
 /adjs.php?
 /adjs/iframe
 /adjs_mod
+/adlabel_horz
 /adlayer
 /adlink.gif
 /adloader.
