--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6gHasJOi4TE/6B5jkoq3eQ
+# Checksum: oNGhUgaOljfmHZwYTFYSqw
 # Updated: 17 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1052,9 +1052,9 @@
 .tattomedia.
 .tbn.ru/
 .teasernet.ru/
+.techbargains.com/inc_deals_feed.
 .technoratimedia.com/
 .techsupportforum.com/images/banners/
-.techbargains.com/inc_deals_feed.
 .teendestruction.com/
 .teltarif.de/ad
 .testberichte.org/gads/
@@ -1351,6 +1351,7 @@
 /ad-vertical
 /ad.asp?
 /ad.aspx?
+/ad.au.doubleclick.net/
 /ad.gif?
 /ad.html?
 /ad.php3?
@@ -2355,8 +2356,8 @@
 /werbung/
 /werbung_
 /whisperer/ads/
-/WidgetAd.aspx?
 /widget_ads?
+/WidgetAd.aspx?
 /wp-content/ads/
 /wp-popup-scheduler/
 /wp-srv/ad/
@@ -2838,6 +2839,7 @@ http://ad.terra.com
 http://ad.uk.doubleclick.net/ad
 http://ad.valuecalling.com/
 http://ad.wsod.com/
+http://ad.ytsa.net/
 http://ad.zanox.com/ppv/
 http://ad.zanox.com/tpv/
 http://ad0.
@@ -2875,7 +2877,6 @@ http://adnext.fr/
 http://adplus.
 http://adprotraffic.com/
 http://ads-
-http://ad.ytsa.net/
 http://ads.24media.gr/
 http://ads.4tube.com/
 http://ads.adap.tv/
