--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: RBiZPFbkd/Fnq+gsw/fd3g
-# Updated: 16 Jun 2010
+# Checksum: kHFaJ2Z7aCPRXZPYF7Bu8Q
+# Updated: 18 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1116,6 +1116,7 @@
 .uff5.to/
 .ugo.com/takeover/
 .unicast.com/
+.upsellit.com/
 .urlcash.net/img/
 .usemax.de/
 .usenetpassport.com/
