--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1,6 +1,5 @@
 # Fanboy's Stats list (Iron-Chrome)
 # Updated: 12 May 2010
-&trackingId=
 -AdTracking.
 -seo-tracker.
 -statistiken.de/
@@ -1050,6 +1049,7 @@
 /pageCounter.adp?
 /pagedot.gif?
 /pagestats/
+/PageTracker?
 /pagetrack.php?
 /pageTracking.
 /pageview;
