--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kHFaJ2Z7aCPRXZPYF7Bu8Q
+# Checksum: hVWab4USx8bJmNq0H+iNEw
 # Updated: 18 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1054,6 +1054,7 @@
 .teasernet.ru/
 .technoratimedia.com/
 .techsupportforum.com/images/banners/
+.techbargains.com/inc_deals_feed.
 .teendestruction.com/
 .teltarif.de/ad
 .testberichte.org/gads/
