--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: hVWab4USx8bJmNq0H+iNEw
+# Checksum: wNCtyAf8AzsykBoESPz97Q
 # Updated: 18 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3137,6 +3137,7 @@ http://howtogeek.com/go/
 http://hwbot.org/banner.
 http://iframe.adultfriendfinder.
 http://iframe.mediaplazza.
+http://iframe.travel.yahoo.com/
 http://ilovecheating.com/ads/
 http://image.cecash.
 http://image.click.livedoor.
