--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -360,8 +360,8 @@
 .media6degrees.
 .mediatracker.co.nz/
 .megastat.net/
-.metacafe.com/debugToSysLog.
 .met.vgwort.de/na/
+.metacafe.com/debugToSysLog.
 .microcounter.
 .microsoft.com/library/svy/
 .microsoft.com/LTS/
@@ -1050,10 +1050,10 @@
 /pageCounter.adp?
 /pagedot.gif?
 /pagestats/
-/PageTracker?
 /pagetrack.php?
-/pageTracking.
 /pageTracker/?
+/PageTracker?
+/pageTracking.
 /pageview;
 /pageviews/
 /partner.gif?
@@ -1331,6 +1331,8 @@
 ;sz=1x2;
 ;sz=3x3;
 ;sz=5x5;
+?eventtype=impression&pid=
+?eventtype=request&pid=
 _adcenterconversion.
 _check.php?referer
 _empty.ad?
