--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oNGhUgaOljfmHZwYTFYSqw
-# Updated: 17 Jun 2010
+# Checksum: boRZ657aXla6yEcQS7xh9w
+# Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2080,6 +2080,7 @@
 /newaff/float
 /newscomaubusiness/css/promotions/
 /ngbn.net/
+/nps-growler/
 /nsfw/sponsors/
 /oas/ad/
 /OAS/banners/
