--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: boRZ657aXla6yEcQS7xh9w
+# Checksum: XWY6XBTsJtpvCjuhRwtv1A
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2065,6 +2065,7 @@
 /MetaAdServer/
 /middle_adv_
 /miva_ads
+/mgid.html
 /mnads1.php?
 /mod_ad/
 /modules_ads.
