--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XYgmFaXlNhNqWnxFItL8OQ
-# Updated: 20 Jun 2010
+# Checksum: vJWtG31lQrTFv5yepBqrOw
+# Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -317,6 +317,7 @@
 .bittads.com/
 .bizographics.
 .bkrtx.com/
+.blinkx.com/adhocnetwork/
 .blinkx.com/f2/overlays/
 .blog.hu/ad/
 .blogads.com/
@@ -325,7 +326,6 @@
 .blueadvertise.
 .bluestreak.com/
 .blumi.to/
-.blinkx.com/adhocnetwork/
 .bns1.net/
 .bodyrock.tv/wp-content/uploads/2010/02/banner_
 .boo-box.com/javascripts/embed.js
@@ -404,6 +404,7 @@
 .com/a?network
 .com/a?pagetype
 .com/a?size
+.com/ad-
 .com/ad.html
 .com/ad.js
 .com/AD/
@@ -414,7 +415,6 @@
 .com/ads.
 .com/ads/
 .com/ads_
-.com/ad-
 .com/adsense/
 .com/adshow
 .com/adstream_
@@ -508,8 +508,8 @@
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
 .egghelp.org/images/misc/
-.ejb.com/300_
 .ehow.com/images/brands/
+.ejb.com/300_
 .eliado.com/banner/
 .elwatan.com/IMG/swf/
 .elyrics.net/inc/ads/
@@ -844,10 +844,10 @@
 .net/ADV/
 .net/adx.js
 .net/adx/
-.net/noidadx/
 .net/affiliate/
 .net/banners/
 .net/bnr/
+.net/noidadx/
 .net/pagead?
 .net3media.
 .netdirect.nl/
@@ -1852,8 +1852,8 @@
 /doubleclickloader.
 /download/ad/
 /drawad.php?
-/DynamicAd?
 /dynamic_banner_
+/DynamicAd?
 /ecom/failsafe/
 /ecomfw.
 /emailads/
@@ -2069,9 +2069,9 @@
 /mcad.php?
 /media/ads/
 /MetaAdServer/
+/mgid.html
 /middle_adv_
 /miva_ads
-/mgid.html
 /mnads1.php?
 /mod_ad/
 /modules_ads.
@@ -2731,6 +2731,7 @@ _google_ad.
 _google_video_ads
 _leftx280_
 _minibanner
+_org_ad.
 _reporting_ads.
 _right_ad.
 _rmadv.
@@ -2836,6 +2837,7 @@ http://ad.jamster.com/
 http://ad.jp.
 http://ad.linkstorms.com/
 http://ad.mygamesol.com/
+http://ad.nz.doubleclick.net/pfadx/
 http://ad.salebroker.de/
 http://ad.sensismediasmart.
 http://ad.sharethis.com/
@@ -2878,7 +2880,6 @@ http://admanag
 http://admatch.
 http://admd.
 http://adn.ebay.com/
-http://ad.nz.doubleclick.net/pfadx/
 http://adnetwork.
 http://adnext.fr/
 http://adplus.
@@ -3396,6 +3397,9 @@ http://www.p2pnet.net/images/
 http://www.physorg.com/banner/
 http://www.porno-file.ru/uploads/
 http://www.pro-clockers.com/images/banners/
+http://www.rejournal.com/images/banners/
+http://www.rejournal.com/ne/images/homepage
+http://www.rejournal.com/users/Blinks/
 http://www.seemygf.com/webmasters/iframe/
 http://www.tripadvisor.com/adp/
 http://www.whistleout.com.au/Widgets/
