--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vJWtG31lQrTFv5yepBqrOw
+# Checksum: HTZlYvchJ6ddN5y+Fyh4+A
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2073,6 +2073,7 @@
 /middle_adv_
 /miva_ads
 /mnads1.php?
+/mod/adman/
 /mod_ad/
 /modules_ads.
 /mr_tb_ad.
