--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XWY6XBTsJtpvCjuhRwtv1A
+# Checksum: xJD6XTTIhDhCV35z/3pd9w
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1848,6 +1848,7 @@
 /download/ad/
 /drawad.php?
 /DynamicAd?
+/dynamic_banner_
 /ecom/failsafe/
 /ecomfw.
 /emailads/
