not required in iron

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xJD6XTTIhDhCV35z/3pd9w
+# Checksum: TEoMP1zEp2ncsjI4R3JHOw
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2734,8 +2734,6 @@ _textlinkspot.
 _topad.php
 _web_adhoc?
 _webbanner_
-ad.au.doubleclick.net/adi/
-ad.au.doubleclick.net/adj/
 Ad468x60
 adbot.com
 adbutler.
