improve verticalacuity.com filter

--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -610,7 +610,7 @@
 .users.51.
 .vbanalytics.
 .ventivmedia.
-.verticalacuity.
+.verticalacuity.com/vat/
 .viglink.com/api/ping?
 .visiblemeasures.com/log?
 .visistat.
