--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -360,6 +360,7 @@
 .media6degrees.
 .mediatracker.co.nz/
 .megastat.net/
+.metacafe.com/debugToSysLog.
 .met.vgwort.de/na/
 .microcounter.
 .microsoft.com/library/svy/
