--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TEoMP1zEp2ncsjI4R3JHOw
+# Checksum: 9FfmSRyE+zjXPRx9VlrgpA
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -325,6 +325,7 @@
 .blueadvertise.
 .bluestreak.com/
 .blumi.to/
+.blinkx.com/adhocnetwork/
 .bns1.net/
 .bodyrock.tv/wp-content/uploads/2010/02/banner_
 .boo-box.com/javascripts/embed.js
