--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9FfmSRyE+zjXPRx9VlrgpA
+# Checksum: VXUsz4PY2/85zT2M9eawkA
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -507,6 +507,7 @@
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
 .egghelp.org/images/misc/
+.ejb.com/300_
 .ehow.com/images/brands/
 .eliado.com/banner/
 .elwatan.com/IMG/swf/
