--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: VXUsz4PY2/85zT2M9eawkA
+# Checksum: Kttl58Dal/lVZ6tfFQBePw
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -843,6 +843,7 @@
 .net/ADV/
 .net/adx.js
 .net/adx/
+.net/noidadx/
 .net/affiliate/
 .net/banners/
 .net/bnr/
@@ -2875,6 +2876,7 @@ http://admanag
 http://admatch.
 http://admd.
 http://adn.ebay.com/
+http://ad.nz.doubleclick.net/pfadx/
 http://adnetwork.
 http://adnext.fr/
 http://adplus.
