--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Kttl58Dal/lVZ6tfFQBePw
+# Checksum: GSw8Mtgax++5NTg7b6n2+A
 # Updated: 19 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1413,6 +1413,7 @@
 /ad_manage.
 /ad_medium_
 /ad_onbit
+/ad_peel/
 /ad_pos=
 /ad_position
 /ad_request.
