--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GSw8Mtgax++5NTg7b6n2+A
-# Updated: 19 Jun 2010
+# Checksum: XYgmFaXlNhNqWnxFItL8OQ
+# Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -414,6 +414,7 @@
 .com/ads.
 .com/ads/
 .com/ads_
+.com/ad-
 .com/adsense/
 .com/adshow
 .com/adstream_
