--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uB5TQk6WYx5r11V8va1OFg
-# Updated: 21 Jun 2010
+# Checksum: Gb7H0eRVnMpaNhG4b0sC0A
+# Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -724,6 +724,7 @@
 .lazygirls.info/ad_
 .lbs.km.ru/
 .lduhtrp.
+.loombo.com/im-ad/
 .lduhtrp.net/image
 .leadmediapartners.
 .levexis.
