--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -68,6 +68,7 @@
 .maxima.xl.pt/pubs/credial/
 .metaffiliation.com/
 .miau.pt/platform/banners
+.micodigo.com/
 .ncs.es/banner/
 .net-empregos.com/images/Banners/
 .net.ar/ads/
