--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -30,6 +30,7 @@
 .cliccabanner.com/
 .clickafiliados.
 .codigobarras.net/
+.contadorgratis.com/
 .com/adssrv/
 .com/afiliados/
 .cruzeirodosul.inf.br/ads/
@@ -55,6 +56,7 @@
 .hotwords.com.mx/
 .ieurop.net/
 .italianos.it/2008/Tim/
+.intrastats.com/
 .jmonline.com.br/uploads/banners/
 .jogolandia.com.br/banners/
 .keyade.com/
