--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -19,6 +19,7 @@
 .br/imagensdb/banners/
 .br/swf/banners/
 .buscape.com.br/skin/
+.cadenaser.com/est.pl?
 .capitalnews.com.br/system/fotosPub/
 .catho.com.br/parceiros/ad/
 .cb.cl/NewCBCL/Banner.
