--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -91,6 +91,7 @@
 .sapo.pt/images_banner/
 .sapo.pt/t2.asp
 .sl.pt/wa.gif?
+.smartclip.net/
 .softclick.com.br/
 .sol.pt/flash/banner_
 .terra.com.br/ads/
