--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -53,6 +53,7 @@
 .es/imagenesDDN/banners/
 .es/traffic/?
 .guiadasemana.com.br/images/tit_pub_
+.globalasia.es/images/banners/
 .hotwords.com.br/
 .hotwords.com.mx/
 .ieurop.net/
