--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Gb7H0eRVnMpaNhG4b0sC0A
+# Checksum: d2XS3Ba7fIfQJv6uUFfJIA
 # Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -724,7 +724,6 @@
 .lazygirls.info/ad_
 .lbs.km.ru/
 .lduhtrp.
-.loombo.com/im-ad/
 .lduhtrp.net/image
 .leadmediapartners.
 .levexis.
@@ -751,6 +750,7 @@
 .liveleak.com/page_parts/
 .liverail.com/?metric
 .livewords.search.
+.loombo.com/im-ad/
 .loveadverts.com/
 .ltassrv.com
 .lushcrush.
@@ -1375,10 +1375,10 @@
 /ad/html/
 /ad/iframe/
 /ad/img/
+/ad/quigo/
 /ad/realclick
 /ad/serve.php
 /ad/sponsors/
-/ad/quigo/
 /ad/swf/
 /ad/textlinks/
 /ad1.htm
@@ -1711,8 +1711,8 @@
 /au2m8_preloader/
 /AuditudeAdUnit.
 /auth.tbn.
-/awempire.js
 /avchatpure.swf
+/awempire.js
 /backlinxxx/js/
 /ban.php?
 /BanMan/
@@ -2309,6 +2309,7 @@
 /system/ads/
 /TabAds/
 /targetedOffer.jsp?
+/TDLads/
 /technomedia.
 /text_ad_
 /textAd.
@@ -2323,7 +2324,6 @@
 /thumbs/ads/
 /tikilink?
 /tizers.php?
-/TDLads/
 /tmo/ads/
 /toigoogleads.
 /top_ad.
@@ -3222,11 +3222,11 @@ http://naughtywebcams.com/exports/tour/?
 http://nbjmp.com/images/
 http://neowin.net/ads/
 http://netspiderads
+http://network.business.com/search/
 http://network.gofeminin.de/diff/
 http://new-popups.ru/
 http://newads.
 http://newt1.adultadworld.
-http://network.business.com/search/
 http://npvos.com/images/
 http://ns4w.org/images/promo/
 http://ns4w.org/images/vod_
@@ -3413,6 +3413,7 @@ http://xban.
 http://xcabin.net/b/
 http://xdev.info/
 http://xfuckbook.com/
+http://xml.exactseek.com/cgi-bin/js-feed.cgi?id=
 http://xxxvipporno.com/xxxvip.gif
 http://yieldbuild.com/
 http://yx0banners.com/
